--- a/src/main/resources/templates/pages/customer_info.html
+++ b/src/main/resources/templates/pages/customer_info.html
@@ -18,7 +18,9 @@
 <!--······················导航栏···························-->
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo" style="text-shadow: 3px 3px 2px #ffbf00;font-size: 25px;font-family:arial;color: #ff6600;">EatingWhat2.0</div>
+        <div class="layui-logo"
+             style="text-shadow: 3px 3px 2px #ffbf00;font-size: 25px;font-family:arial;color: #ff6600;">EatingWhat2.0
+        </div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a th:href="@{/customer/toHome}">HOME</a></li>
@@ -31,7 +33,6 @@
                 </dl>
             </li>
         </ul>
-
 
 
         <!--未登陆-->
@@ -49,7 +50,8 @@
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
                     <a href="javascript:;">
-                         <img th:src="@{/static/upload/{loginBeanImageName}(loginBeanImageName=${session.loginBean.image})}" class="layui-nav-img">
+                         <img th:src="@{/static/upload/{loginBeanImageName}(loginBeanImageName=${session.loginBean.image})}"
+                              class="layui-nav-img">
                         <span th:text="${session.loginBean.name}"></span>
                     </a>
                     <dl class="layui-nav-child">
@@ -64,7 +66,7 @@
 </div>
 <!--······················导航栏结束···························-->
 
-<div  style="width: 75%;margin:0px auto; " >
+<div style="width: 75%;margin:0px auto; ">
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 10px;">
         <legend>个人信息</legend>
     </fieldset>
@@ -72,7 +74,8 @@
 
     <div style="width:70%;height: 100px;display: flex;justify-content: center;margin:0px auto;">
         <div style="border-radius: 50%;height:100px;width: 100px;background-color: #2D93CA;overflow: hidden; ">
-            <img alt="头像" th:src="@{/static/upload/{loginBeanImage}(loginBeanImage=${session.loginBean.image})}" style="width: 100px; height: 100px;">
+            <img alt="头像" th:src="@{/static/upload/{loginBeanImage}(loginBeanImage=${session.loginBean.image})}"
+                 style="width: 100px; height: 100px;">
         </div>
 
         <div style="flex:1">
@@ -128,32 +131,29 @@
 </div>
 
 
-
-
 <!--UI的最终呈现得益于 Form模块 的全自动渲染，她将原本普通的诸如select、checkbox、radio等元素重置为你所看到的模样。-->
 <script>
     //Demo
-    layui.use(['form','upload','layer'], function(){
+    layui.use(['form', 'upload', 'layer'], function () {
         var layer = layui.layer;
         var upload = layui.upload;
         //layui单图片上传
         var uploadInst = upload.render({
             elem: '.headPortrait' //绑定元素
-            ,url: '/customer/upload?id='+[[${session.loginBean.id}]] //在 choose 回调之后、done/error 回调之前触发。返回的参数完全类似 choose 回调。
-            ,acceptMime: 'image/*'
-            ,before: function(obj){ //上传完毕前的loading
+            , url: '/customer/upload?id=' + [[${session.loginBean.id}]] //在 choose 回调之后、done/error 回调之前触发。返回的参数完全类似 choose 回调。
+            , acceptMime: 'image/*'
+            , before: function (obj) { //上传完毕前的loading
                 layer.load(); //上传loading
             }
-            ,done: function(data){
+            , done: function (data) {
                 window.location.reload();
             }
-            ,error: function(){
+            , error: function () {
                 alert("回调失败");
                 //请求异常回调
             }
         });
     });
-
 
 
 </script>
