--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,7 +18,9 @@
 <!--······················导航栏···························-->
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo" style="text-shadow: 3px 3px 2px #ffbf00;font-size: 25px;font-family:arial;color: #ff6600;">EatingWhat2.0</div>
+        <div class="layui-logo"
+             style="text-shadow: 3px 3px 2px #ffbf00;font-size: 25px;font-family:arial;color: #ff6600;">LuckyMall
+        </div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a th:href="@{/customer/toHome}">HOME</a></li>
@@ -31,7 +33,6 @@
                 </dl>
             </li>
         </ul>
-
 
 
         <!--未登陆-->
@@ -49,7 +50,8 @@
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
                     <a href="javascript:;">
-                         <img th:src="@{/static/upload/{loginBeanImageName}(loginBeanImageName=${session.loginBean.image})}" class="layui-nav-img">
+                         <img th:src="@{/static/upload/{loginBeanImageName}(loginBeanImageName=${session.loginBean.image})}"
+                              class="layui-nav-img">
                         <span th:text="${session.loginBean.name}"></span>
                     </a>
                     <dl class="layui-nav-child">
@@ -65,7 +67,7 @@
 <!--······················导航栏结束···························-->
 
 
-<div  style="width: 75%;margin:0px auto; " >
+<div style="width: 75%;margin:0px auto; ">
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 10px;">
         <legend>首页</legend>
     </fieldset>
@@ -84,28 +86,25 @@
 </div>
 
 
-
-
 <script>
 
 
-
-    layui.use(['carousel', 'form'], function(){
+    layui.use(['carousel', 'form'], function () {
         var carousel = layui.carousel
-            ,form = layui.form;
+            , form = layui.form;
 
         //常规轮播
         carousel.render({
             elem: '#test1'
-            ,arrow: 'always'
+            , arrow: 'always'
         });
 
         //改变下时间间隔、动画类型、高度
         carousel.render({
             elem: '#test2'
-            ,interval: 1800
-            ,anim: 'fade'
-            ,height: '120px'
+            , interval: 1800
+            , anim: 'fade'
+            , height: '120px'
         });
 
         //设定各种参数
@@ -115,21 +114,21 @@
         //图片轮播
         carousel.render({
             elem: '#test10'
-            ,width: '1100px'
-            ,height: '700px'
-            ,interval: 5000
+            , width: '1100px'
+            , height: '700px'
+            , interval: 5000
         });
 
         //事件
-        carousel.on('change(test4)', function(res){
+        carousel.on('change(test4)', function (res) {
             console.log(res)
         });
 
         var $ = layui.$, active = {
-            set: function(othis){
+            set: function (othis) {
                 var THIS = 'layui-bg-normal'
-                    ,key = othis.data('key')
-                    ,options = {};
+                    , key = othis.data('key')
+                    , options = {};
 
                 othis.css('background-color', '#5FB878').siblings().removeAttr('style');
                 options[key] = othis.data('value');
@@ -138,30 +137,30 @@
         };
 
         //监听开关
-        form.on('switch(autoplay)', function(){
+        form.on('switch(autoplay)', function () {
             ins3.reload({
                 autoplay: this.checked
             });
         });
 
-        $('.demoSet').on('keyup', function(){
+        $('.demoSet').on('keyup', function () {
             var value = this.value
-                ,options = {};
-            if(!/^\d+$/.test(value)) return;
+                , options = {};
+            if (!/^\d+$/.test(value)) return;
 
             options[this.name] = value;
             ins3.reload(options);
         });
 
         //其它示例
-        $('.demoTest .layui-btn').on('click', function(){
+        $('.demoTest .layui-btn').on('click', function () {
             var othis = $(this), type = othis.data('type');
             active[type] ? active[type].call(this, othis) : '';
         });
 
 
         <!--导航栏的下拉菜单-->
-        layui.use('element', function(){
+        layui.use('element', function () {
             var element = layui.element;
 
         });
