--- a/src/main/resources/templates/pages/evaluation_check.html
+++ b/src/main/resources/templates/pages/evaluation_check.html
@@ -19,7 +19,9 @@
 <!--······················导航栏···························-->
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo" style="text-shadow: 3px 3px 2px #ffbf00;font-size: 25px;font-family:arial;color: #ff6600;">EatingWhat2.0</div>
+        <div class="layui-logo"
+             style="text-shadow: 3px 3px 2px #ffbf00;font-size: 25px;font-family:arial;color: #ff6600;">EatingWhat2.0
+        </div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a th:href="@{/customer/toHome}">HOME</a></li>
@@ -32,7 +34,6 @@
                 </dl>
             </li>
         </ul>
-
 
 
         <!--未登陆-->
@@ -50,7 +51,8 @@
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
                     <a href="javascript:;">
-                         <img th:src="@{/static/upload/{loginBeanImageName}(loginBeanImageName=${session.loginBean.image})}" class="layui-nav-img">
+                         <img th:src="@{/static/upload/{loginBeanImageName}(loginBeanImageName=${session.loginBean.image})}"
+                              class="layui-nav-img">
                         <span th:text="${session.loginBean.name}"></span>
                     </a>
                     <dl class="layui-nav-child">
@@ -65,7 +67,7 @@
 </div>
 <!--······················导航栏结束···························-->
 
-<div  style="width: 75%;margin:0px auto;" >
+<div style="width: 75%;margin:0px auto;">
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 10px;">
         <legend>我的订单</legend>
     </fieldset>
@@ -85,20 +87,21 @@
                 <!--······················配送中···························-->
                 <div class="layui-tab-item layui-show">
 
-                    <div style="height: 120px;width: 100%;background-color: #34495e;margin-bottom: 10px" >
+                    <div style="height: 120px;width: 100%;background-color: #34495e;margin-bottom: 10px">
                         <h1 style="color:#ffbc0d;line-height: 120px;margin-left: 20px; ">我的评价</h1>
                     </div>
 
 
-
                     <span th:each="item: ${evaluationList}">
 
-                        <table bordercolor="#bfbfbf" style="border-collapse:collapse;width: 90%;margin:auto;border: 0px; background-color: #f7f7f7">
+                        <table bordercolor="#bfbfbf"
+                               style="border-collapse:collapse;width: 90%;margin:auto;border: 0px; background-color: #f7f7f7">
 
                                         <tr cel style="width: 100%;height: 75px">
                                             <td width="3%"></td>
                                             <td width="10%">
-                                                <img th:src="@{/static/upload/{loginBeanImage}(loginBeanImage=${item.customerImage})}" height="50px" width="50px" style="margin: 2px;border-radius: 25px">
+                                                <img th:src="@{/static/upload/{loginBeanImage}(loginBeanImage=${item.customerImage})}"
+                                                     height="50px" width="50px" style="margin: 2px;border-radius: 25px">
                                             </td>
                                             <td>
                                                 <table width="100%" height="100%">
@@ -134,16 +137,24 @@
                                         <tr>
                                             <td width="3%"></td>
                                             <td colspan="2" style="height: 120px">
-                                                    <img th:src="@{/static/upload/{image1}(image1=${item.image1})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+                                                    <img th:src="@{/static/upload/{image1}(image1=${item.image1})}"
+                                                         height="100px" width="100px"
+                                                         style="margin: 2px;border-radius: 5px">
 
                                                 <span th:if=" ${item.image2} ne '' ">
-                                                    <img th:src="@{/static/upload/{image1}(image1=${item.image2})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+                                                    <img th:src="@{/static/upload/{image1}(image1=${item.image2})}"
+                                                         height="100px" width="100px"
+                                                         style="margin: 2px;border-radius: 5px">
                                                 </span>
                                                 <span th:if=" ${item.image3} ne '' ">
-                                                    <img th:src="@{/static/upload/{image1}(image1=${item.image3})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+                                                    <img th:src="@{/static/upload/{image1}(image1=${item.image3})}"
+                                                         height="100px" width="100px"
+                                                         style="margin: 2px;border-radius: 5px">
                                                 </span>
                                                 <span th:if=" ${item.image4} ne '' ">
-                                                    <img th:src="@{/static/upload/{image1}(image1=${item.image4})}" height="100px" width="100px" style="margin: 2px;border-radius: 5px">
+                                                    <img th:src="@{/static/upload/{image1}(image1=${item.image4})}"
+                                                         height="100px" width="100px"
+                                                         style="margin: 2px;border-radius: 5px">
                                                 </span>
                                             </td>
                                         </tr>
@@ -168,33 +179,33 @@
 <script th:src="@{/static/js/jquery-3.4.1.min.js}" charset="utf-8"></script>
 <!--卡片风格的Tab-->
 <script>
-    layui.use('element', function(){
+    layui.use('element', function () {
             var $ = layui.jquery
-                ,element = layui.element; //Tab的切换功能，切换事件监听等，需要依赖element模块
+                , element = layui.element; //Tab的切换功能，切换事件监听等，需要依赖element模块
 
             //触发事件
             var active = {
-                tabAdd: function(){
+                tabAdd: function () {
                     //新增一个Tab项
                     element.tabAdd('demo', {
-                        title: '新选项'+ (Math.random()*1000|0) //用于演示
-                        ,content: '内容'+ (Math.random()*1000|0)
-                        ,id: new Date().getTime() //实际使用一般是规定好的id，这里以时间戳模拟下
+                        title: '新选项' + (Math.random() * 1000 | 0) //用于演示
+                        , content: '内容' + (Math.random() * 1000 | 0)
+                        , id: new Date().getTime() //实际使用一般是规定好的id，这里以时间戳模拟下
                     })
                 }
-                ,tabDelete: function(othis){
+                , tabDelete: function (othis) {
                     //删除指定Tab项
                     element.tabDelete('demo', '44'); //删除：“商品管理”
 
                     othis.addClass('layui-btn-disabled');
                 }
-                ,tabChange: function(){
+                , tabChange: function () {
                     //切换到指定Tab项
                     element.tabChange('demo', '22'); //切换到：用户管理
                 }
             };
 
-            $('.site-demo-active').on('click', function(){
+            $('.site-demo-active').on('click', function () {
                 var othis = $(this), type = othis.data('type');
                 active[type] ? active[type].call(this, othis) : '';
             });
@@ -203,14 +214,11 @@
             var layid = location.hash.replace(/^#test=/, '');
             element.tabChange('test', layid);
 
-            element.on('tab(test)', function(elem){
-                location.hash = 'test='+ $(this).attr('lay-id');
+            element.on('tab(test)', function (elem) {
+                location.hash = 'test=' + $(this).attr('lay-id');
             });
         }
     );
-
-
-
 
 
 </script>
