--- a/src/main/resources/templates/pages/ordering_evaluateOrdering.html
+++ b/src/main/resources/templates/pages/ordering_evaluateOrdering.html
@@ -19,7 +19,9 @@
 <!--······················导航栏···························-->
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo" style="text-shadow: 3px 3px 2px #ffbf00;font-size: 25px;font-family:arial;color: #ff6600;">EatingWhat2.0</div>
+        <div class="layui-logo"
+             style="text-shadow: 3px 3px 2px #ffbf00;font-size: 25px;font-family:arial;color: #ff6600;">EatingWhat2.0
+        </div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a th:href="@{/customer/toHome}">HOME</a></li>
@@ -32,7 +34,6 @@
                 </dl>
             </li>
         </ul>
-
 
 
         <!--未登陆-->
@@ -50,7 +51,8 @@
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
                     <a href="javascript:;">
-                         <img th:src="@{/static/upload/{loginBeanImageName}(loginBeanImageName=${session.loginBean.image})}" class="layui-nav-img">
+                         <img th:src="@{/static/upload/{loginBeanImageName}(loginBeanImageName=${session.loginBean.image})}"
+                              class="layui-nav-img">
                         <span th:text="${session.loginBean.name}"></span>
                     </a>
                     <dl class="layui-nav-child">
@@ -64,18 +66,19 @@
     </div>
 </div>
 <!--······················导航栏结束···························-->
-<div  style="width: 75%;margin:0px auto;" >
+<div style="width: 75%;margin:0px auto;">
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 10px;">
         <legend>订单评价</legend>
     </fieldset>
 
     <div style="width: 960px;min-height:600px;margin:0px auto;background-color:#f7f7f7;margin-top: 30px;">
-        <div style="width: 800px;margin:auto" class="layui-form" >
+        <div style="width: 800px;margin:auto" class="layui-form">
 
             <!--隔开-->
             <div style="width: 100%;height: 30px;"></div>
 
-            <P style="text-align: center;width: 100%;font-size: 20px;font-weight: 600;line-height: 60px;">这次用餐体验还满意吗？</P>
+            <P style="text-align: center;width: 100%;font-size: 20px;font-weight: 600;line-height: 60px;">
+                这次用餐体验还满意吗？</P>
 
 
             <div style="display:flex;justify-content: center;height: 60px;position: relative;left: 20px;">
@@ -84,14 +87,14 @@
 
 
             <!--lay-filter="formValue"   是为了获得form表单里面input的值才设置的，在图片上传的回调函数里面有用到-->
-            <form class="layui-form formTest"  lay-filter="formValue" >
+            <form class="layui-form formTest" lay-filter="formValue">
 
 
                 <div class="layui-form-item layui-form-text">
 
                     <label class="layui-form-label">评价</label>
                     <div class="layui-input-block">
-                        <textarea name="evaluationTxt" placeholder="请输入内容" class="layui-textarea" ></textarea>
+                        <textarea name="evaluationTxt" placeholder="请输入内容" class="layui-textarea"></textarea>
                     </div>
                 </div>
 
@@ -106,16 +109,17 @@
 
                 <div class="layui-upload layui-form-item">
 
-                    <blockquote class="layui-elem-quote layui-quote-nm layui-input-block upload" >
+                    <blockquote class="layui-elem-quote layui-quote-nm layui-input-block upload">
                         点击上传图片（最多上传4张图片）
-                        <div class="layui-upload-list preview" ></div>
+                        <div class="layui-upload-list preview"></div>
                     </blockquote>
                 </div>
 
 
                 <div class="layui-form-item">
                     <div class="layui-input-block">
-                        <button class="layui-btn submit" lay-submit lay-filter="formDemo" onclick="return false;">立即提交</button>
+                        <button class="layui-btn submit" lay-submit lay-filter="formDemo" onclick="return false;">立即提交
+                        </button>
                         <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                     </div>
                 </div>
@@ -127,7 +131,6 @@
     </div>
 
 
-
 </div>
 
 <script th:src="@{/static/layui/layui.js}" charset="utf-8"></script>
@@ -136,18 +139,17 @@
 <script>
 
 
-
     //提交到后台的json数据
-    var dataSubmit={
-        "score":5,//评分默认5颗星
-        "evaluation":"",//文字评价
-        "anonymity":0,//是否匿名,1匿名，0不匿名
-        "orderingId":"",
-        "storeId":"",
-        "image1":"",//图片一的名字，一共可以上传4张图
-        "image2":"",
-        "image3":"",
-        "image4":""
+    var dataSubmit = {
+        "score": 5,//评分默认5颗星
+        "evaluation": "",//文字评价
+        "anonymity": 0,//是否匿名,1匿名，0不匿名
+        "orderingId": "",
+        "storeId": "",
+        "image1": "",//图片一的名字，一共可以上传4张图
+        "image2": "",
+        "image3": "",
+        "image4": ""
     }
 
     $(function () {
@@ -155,42 +157,42 @@
 
     })
 
-    var cout=1;
-    layui.use(['rate','form','upload','layer'], function(){
+    var cout = 1;
+    layui.use(['rate', 'form', 'upload', 'layer'], function () {
         var rate = layui.rate;
         var form = layui.form;
         var upload = layui.upload;
-        var layer=layui.layer;
+        var layer = layui.layer;
 
         //layui，多图片上传
         var uploadInst = upload.render({
             elem: '.upload' //绑定元素
-            ,url: '/evaluation/submitEvaluation1' //上传接口
-            ,multiple: true
-            ,acceptMime: 'image/*'
+            , url: '/evaluation/submitEvaluation1' //上传接口
+            , multiple: true
+            , acceptMime: 'image/*'
             //,auto:false //是否自动提交，默认true
-            ,number:4
+            , number: 4
             //,bindAction:'.submit'
-            ,choose:function(obj){
+            , choose: function (obj) {
 
                 //预读本地文件示例，不支持ie8
-                obj.preview(function(index, file, result){
+                obj.preview(function (index, file, result) {
 
-                    $('.preview').append('<img src="'+ result +'" alt="'+ file.name +'" style="width: 80px;height: 80px;margin: 5px">')
+                    $('.preview').append('<img src="' + result + '" alt="' + file.name + '" style="width: 80px;height: 80px;margin: 5px">')
 
                 });
             }
-            ,done: function(data){
+            , done: function (data) {
 
-                dataSubmit["image"+cout]=data["image"];
+                dataSubmit["image" + cout] = data["image"];
                 cout++;
                 //alert(data["image"]);
 
             }
-            ,allDone: function(obj){ //当文件全部被提交后，才触发
+            , allDone: function (obj) { //当文件全部被提交后，才触发
 
             }
-            ,error: function(){
+            , error: function () {
                 alert("回调失败");
             }
         });
@@ -198,10 +200,10 @@
         //渲染评分组件
         var ins1 = rate.render({
             elem: '.mark'  //绑定元素
-            ,value: 0//初始值
+            , value: 0//初始值
 
-            ,choose: function(value){
-                dataSubmit["score"]=value;
+            , choose: function (value) {
+                dataSubmit["score"] = value;
             }
 
         });
@@ -210,14 +212,14 @@
 
             //获得form表单里面的值
             var formValue = form.val("formValue");
-            var orderingId =[[${ordering.id}]];
-            var storeId=[[${store.id}]];
+            var orderingId = [[${ordering.id}]];
+            var storeId = [[${store.id}]];
 
             //data是我们最终提交提交到后台的一个JSON对象， 将原本form表单里面的值赋值到data对应的属性
-            dataSubmit["evaluation"]= formValue["evaluationTxt"];
-            dataSubmit["anonymity"]= formValue["anonymity"];
-            dataSubmit["orderingId"]=orderingId;
-            dataSubmit["storeId"]=storeId;
+            dataSubmit["evaluation"] = formValue["evaluationTxt"];
+            dataSubmit["anonymity"] = formValue["anonymity"];
+            dataSubmit["orderingId"] = orderingId;
+            dataSubmit["storeId"] = storeId;
 
 
             $.ajax({
@@ -225,23 +227,25 @@
                         'Content-Type': 'application/json'
                     },
 
-                    url:'/evaluation/submitEvaluation2',
+                    url: '/evaluation/submitEvaluation2',
                     type: "POST",
 
-                    data:JSON.stringify(dataSubmit),
-                    success:function(data){
+                    data: JSON.stringify(dataSubmit),
+                    success: function (data) {
 
-                        if(data=="success"){$(location).attr('href', '/evaluation/toEvaluationCheck');}
-                        if(data=="failure"){
+                        if (data == "success") {
+                            $(location).attr('href', '/evaluation/toEvaluationCheck');
+                        }
+                        if (data == "failure") {
                             layer.open({
                                 type: 1
-                                ,offset: 'auto' //具体配置参考：http://www.layui.com/doc/modules/layer.html#offset
-                                ,id: 'alertMsg' //防止重复弹出
-                                ,content: '<div style="padding: 20px 100px;">'+ data +'</div>'
-                                ,btn: '关闭'
-                                ,btnAlign: 'c' //按钮居中
-                                ,shade: 0 //不显示遮罩
-                                ,yes: function(){
+                                , offset: 'auto' //具体配置参考：http://www.layui.com/doc/modules/layer.html#offset
+                                , id: 'alertMsg' //防止重复弹出
+                                , content: '<div style="padding: 20px 100px;">' + data + '</div>'
+                                , btn: '关闭'
+                                , btnAlign: 'c' //按钮居中
+                                , shade: 0 //不显示遮罩
+                                , yes: function () {
                                     layer.closeAll();
                                 }
                             });
@@ -253,9 +257,6 @@
 
     });
 </script>
-
-
-
 
 
 </body>
