--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -21,7 +21,9 @@
 <!--······················导航栏···························-->
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo" style="text-shadow: 3px 3px 2px #ffbf00;font-size: 25px;font-family:arial;color: #ff6600;">EatingWhat2.0</div>
+        <div class="layui-logo"
+             style="text-shadow: 3px 3px 2px #ffbf00;font-size: 25px;font-family:arial;color: #ff6600;">EatingWhat2.0
+        </div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a th:href="@{/customer/toHome}">HOME</a></li>
@@ -34,7 +36,6 @@
                 </dl>
             </li>
         </ul>
-
 
 
         <!--未登陆-->
@@ -52,7 +53,8 @@
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
                     <a href="javascript:;">
-                         <img th:src="@{/static/upload/{loginBeanImageName}(loginBeanImageName=${session.loginBean.image})}" class="layui-nav-img">
+                         <img th:src="@{/static/upload/{loginBeanImageName}(loginBeanImageName=${session.loginBean.image})}"
+                              class="layui-nav-img">
                         <span th:text="${session.loginBean.name}"></span>
                     </a>
                     <dl class="layui-nav-child">
@@ -68,19 +70,19 @@
 <!--······················导航栏结束···························-->
 
 
-
-<div  style="width: 75%;margin:0px auto; " >
+<div style="width: 75%;margin:0px auto; ">
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 10px;">
-        <legend>注册eattingwhat账号</legend>
+        <legend>注册luckymall账号</legend>
     </fieldset>
     <div style="width: 100%;height: 100%;display: flex;justify-content: center;">
 
-        <form class="layui-form"  th:action="@{/customer/register}" method="post">
+        <form class="layui-form" th:action="@{/customer/register}" method="post">
             <div class="layui-form-item">
                 <label class="layui-form-label">用户名</label>
                 <div class="layui-input-inline">
 
-                    <input type="text" name="name" required lay-verify="required" placeholder="请输入长度2-6的用户名"  class="layui-input">
+                    <input type="text" name="name" required lay-verify="required" placeholder="请输入长度2-6的用户名"
+                           class="layui-input">
                 </div>
                 <!--${requestScope.info}就等价于request.getAttribute("info");-->
                 <div class="layui-form-mid layui-word-aux"></div>
@@ -88,7 +90,8 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">密码</label>
                 <div class="layui-input-inline">
-                    <input type="password" name="password" required lay-verify="required" autocomplete="off" placeholder="请输入密码长度为6-11"  class="layui-input">
+                    <input type="password" name="password" required lay-verify="required" autocomplete="off"
+                           placeholder="请输入密码长度为6-11" class="layui-input">
                 </div>
                 <div class="layui-form-mid layui-word-aux"></div>
                 <div class="layui-form-mid layui-word-aux"></div>
@@ -96,13 +99,15 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">确认密码</label>
                 <div class="layui-input-inline">
-                    <input type="password" name="cfmpassword" required lay-verify="required" autocomplete="off" placeholder="请输入确认密码"  class="layui-input">
+                    <input type="password" name="cfmpassword" required lay-verify="required" autocomplete="off"
+                           placeholder="请输入确认密码" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">手机号</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="phone" required lay-verify="required"  placeholder="请输入手机号"  class="layui-input">
+                    <input type="text" name="phone" required lay-verify="required" placeholder="请输入手机号"
+                           class="layui-input">
                 </div>
                 <div class="layui-form-mid layui-word-aux"></div>
             </div>
@@ -152,7 +157,6 @@
 </div>
 
 
-
 <!-- JavaScript 放置在文档最后面可以使页面加载速度更快 -->
 <script th:src="@{/static/layui/layui.js}" charset="utf-8"></script>
 <script th:src="@{/static/js/jquery-3.4.1.min.js}" charset="utf-8"></script>
@@ -160,33 +164,29 @@
 
 <script>
 
-    var msg="[[${msg}]]";
+    var msg = "[[${msg}]]";
 
 
     //Demo
-    layui.use(['form','layer'], function(){
+    layui.use(['form', 'layer'], function () {
         var $ = layui.jquery, layer = layui.layer; //独立版的layer无需执行这一句
 
-        if(msg!=""){
+        if (msg != "") {
 
             layer.open({
                 type: 1
-                ,offset: 'auto' //具体配置参考：http://www.layui.com/doc/modules/layer.html#offset
-                ,id: 'alertMsg' //防止重复弹出
-                ,content: '<div style="padding: 20px 100px;">'+ msg +'</div>'
-                ,btn: '关闭'
-                ,btnAlign: 'c' //按钮居中
-                ,shade: 0 //不显示遮罩
-                ,yes: function(){
+                , offset: 'auto' //具体配置参考：http://www.layui.com/doc/modules/layer.html#offset
+                , id: 'alertMsg' //防止重复弹出
+                , content: '<div style="padding: 20px 100px;">' + msg + '</div>'
+                , btn: '关闭'
+                , btnAlign: 'c' //按钮居中
+                , shade: 0 //不显示遮罩
+                , yes: function () {
                     layer.closeAll();
                 }
             });
         }
     });
-
-
-
-
 
 
 </script>
