修复页面的bug

--- a/src/main/resources/templates/store_street.html
+++ b/src/main/resources/templates/store_street.html
@@ -133,8 +133,7 @@
 <script th:src="@{/static/js/jquery-3.4.1.min.js}" charset="utf-8"></script>
 
 <script>
-    <!--
-    导航栏的下拉菜单-->
+    <!--导航栏的下拉菜单-->
     layui.use('element', function () {
         var element = layui.element;
     });
